# opm-utilities

./: .gitignore  README.md  bash_completion.sh  compare_wells.m  eclipse.el  opm-build.sh  opm-multi-pr-build.py  summaryplot
opm-ci-builder/tests/: CMakeLists.txt  README.md  build.sh  spe1_force_failures.patch
opm-super/: CMakeLists.txt
opmrun/: DESCRIPTION.md  LICENSE  MANIFEST.in  README  README.md  Release-Notes  Release-Notes.txt  opm-common.py  opm_common.py  opm_compress.py  opm_keyw.py  opm_prodsched.py  opm_sensitivity.py  opm_wellspec.py  opm_welltraj.py  opmkeyw.py  opmrun.py  opmsens.py  pyproject.toml  requirements.txt  setup.py
opmrun/opmrun/: __init__.py  opm_common.py  opm_compress.py  opm_keyw.py  opm_notify.py  opm_prodsched.py  opm_sensitivity.py  opm_wellspec.py  opm_welltraj.py  opmrun.py
opmrun/opmrun/opmvtl/00_HEADER/: HEADER-EOF.vm  HEADER-LICENSE.vm  HEADER-OPM.vm  HEADER-SHORT.vm
opmrun/opmrun/opmvtl/01_GLOBAL/: COMMENT.vm  DEBUG.vm  END.vm  ENDSKIP.vm  MESSAGES.vm  NOECHO.vm  NOWARN.vm  SKIP100.vm  SKIP300.vm
opmrun/opmrun/opmvtl/02_RUNSPEC/: ACTPARAM.vm  ALKALINE.vm  API.vm  AUTOREF.vm  BLACKOIL.vm  BPARA.vm  BRINE.vm  CO2STORE.vm  COAL.vm  CPR.vm  DEBUG.vm  DIFFUSE.vm  DIMENS.vm  DISGAS.vm  DUALPERM.vm  ECLMC.vm  EQLDIMS.vm  EQLOPTS.vm  FIELD.vm  FMTIN.vm  FMTOUT.vm  FOAM.vm  FRICTION.vm  FULLIMP.vm  GRAVDR.vm  GRAVDRM.vm  GRIDOPTS.vm  LAB.vm  LGR.vm  LOAD.vm  LOWSALT.vm  MESSAGES.vm  METRIC.vm  MISCIBLE.vm  MSGFILE.vm  MULTIN.vm  MULTOUTS.vm  NOCASC.vm  NODPPM.vm  NONNC.vm  (+30 more)
opmrun/opmrun/opmvtl/03_GRID/: ACTNUM.vm  ADDREG.vm  AQUANCON.vm  AQUCON.vm  BOX.vm  COPYBOX.vm  COPYREG.vm  DRV.vm  DTHETAV.vm  DUMPFLUX.vm  DX.vm  DZ.vm  DZV.vm  ENDBOX.vm  EQUALS.vm  FAULTS.vm  FILEUNIT.vm  GRID.velocity  GRID.vm  GRIDFILE.vm  HEATCR.vm  HRFIN.vm  HYFIN.vm  HZFIN.vm  IMPORT.vm  INIT.vm  INRAD.vm  JFUNC.vm  LX.vm  MAPUNITS.vm  MINPORV.vm  MINPV.vm  MINPVV.vm  MINVALUE.vm  MULTFLT.vm  MULTIREG.vm  MULTNUM.vm  MULTREGP.vm  MULTX.vm  MULTZ.vm  (+20 more)
opmrun/opmrun/opmvtl/04_EDIT/: EDITNNC.vm  TRANX.vm  TRANY.vm
opmrun/opmrun/opmvtl/05_PROPS/: ADSALNOD.vm  BDENSITY.vm  DIFFC.vm  EHYSTRR.vm  FOAMADS.vm  FOAMMOB.vm  GASDENT.vm  GASJT.vm  GRAVCONS.vm  GRAVITY.vm  MICPPARA.vm  NOWARNEP.vm  OILDENT.vm  OILVISCT.vm  OVERBURD.vm  PLYADS.vm  PLYADSS.vm  PLYDHFLF.vm  PLYMAX.vm  PLYROCK.vm  PLYSHLOG.vm  PMISC.vm  PROPS.velocity  PROPS.vm  PVDO.vm  PVTGWO.vm  PVTW.vm  PVZG.vm  ROCK.vm  ROCK2D.vm  ROCK2DTR.vm  ROCKTABH.vm  (+22 more)
opmrun/opmvtl/00_HEADER/: HEADER-EOF.vm  HEADER-INCLUDE.vm  HEADER-LICENSE.vm  HEADER-LONG.vm  HEADER-OPM.vm  HEADER-SHORT.vm
opmrun/opmvtl/01_GLOBAL/: COMMENT.velocity  COMMENT.vm  DEBUG.vm  ECHO.vm  END.vm  ENDINC.vm  ENDSKIP.vm  EXTRAPMS.vm  INCLUDE.velocity  INCLUDE.vm  MESSAGE.vm  MESSAGES.vm  NOECHO.vm  NOWARN.vm  SKIP.vm  SKIP100.vm  SKIP300.vm  WARN.vm
opmrun/opmvtl/02_RUNSPEC/: ACTDIMS.vm  ACTPARAM.vm  ALKALINE.vm  API.vm  AQUDIMS.vm  AUTOREF.vm  BLACKOIL.vm  BRINE.vm  CO2STORE.vm  COAL.vm  CPR.vm  DEBUG.vm  DIFFUSE.vm  DIMENS.vm  DISGAS.vm  DUALPERM.vm  DUALPORO.vm  ECLMC.vm  ENDSCALE.vm  EQLDIMS.vm  EQLOPTS.vm  FAULTDIM.vm  FIELD.vm  FMTIN.vm  FMTOUT.vm  FOAM.vm  FRICTION.vm  FULLIMP.vm  GAS.vm  GIMODEL.vm  GRAVDR.vm  GRAVDRM.vm  GRIDOPTS.vm  IMPES.vm  LAB.vm  LGR.vm  LGRCOPY.vm  LOAD.velocity  LOAD.vm  LOWSALT.vm  (+64 more)
opmrun/opmvtl/03_GRID/: ACTNUM.vm  ADD.vm  ADDREG.vm  AQUANCON.vm  AQUCON.vm  AQUNUM.vm  BOX.vm  CARFIN.vm  COARSEN.vm  COORD.vm  COORDSYS.vm  COPY.vm  COPYBOX.vm  COPYREG.vm  DRV.vm  DTHETA.vm  DTHETAV.vm  DUMPFLUX.vm  DX.vm  DXV.vm  DY.vm  DYV.vm  DZ.vm  DZNET.vm  DZV.vm  ENDBOX.vm  EQUALREG.vm  EQUALS.vm  FAULTS.vm  FILEUNIT.vm  FLUXNUM.vm  GDFILE.vm  GRID.velocity  GRID.vm  GRIDFILE.vm  GRIDOPTS.vm  GRIDUNIT.vm  HEATCR.vm  HEATCRT.vm  HRFIN.vm  (+66 more)
opmrun/opmvtl/04_EDIT/: DEPTH.vm  EDIT.vm  EDITNNC.vm  EDITNNCR.vm  PORV.vm  TRANX.vm  TRANY.vm  TRANZ.vm
opmrun/opmvtl/05_PROPS/: ADSALNOD.vm  AQUTAB.vm  BDENSITY.vm  DENSITY.vm  DIFFC.vm  EHYSTR.vm  EHYSTRR.vm  FILLEPS.vm  FOAMADS.vm  FOAMFSC.vm  FOAMMOB.vm  FOAMOPTS.vm  FOAMROCK.vm  GASDENT.vm  GASVISCT.vm  GRAVCONS.vm  GRAVITY.vm  HYMOBGDR.vm  MICPPARA.vm  MISC.vm  MSFN.vm  NOWARNEP.vm  OILDENT.vm  OILJT.vm  OILVISCT.vm  OVERBURD.vm  PERMFACT.vm  PLMIXPAR.vm  PLYADS.vm  PLYADSS.vm  PLYDHFLF.vm  PLYMAX.vm  PLYMWINJ.vm  PLYROCK.vm  PLYSHEAR.vm  PLYSHLOG.vm  PLYVISC.vm  PLYVMH.vm  PMISC.vm  PPCWMAX.vm  (+70 more)
opmrun/opmvtl/06_REGIONS/: EQLNUM.vm  FIP.vm  FIPNUM.vm  FIPOWG.vm  IMBNUM.vm  PLMXNUM.vm  PVTNUM.vm  REGIONS.vm  RPTREGS.vm  SATNUM.vm
opmrun/opmvtl/07_SOLUTION/: APIVD.vm  AQANCONL.vm  AQUALIST.vm  AQUCT.vm  AQUFET.vm  AQUFETP.vm  BC.vm  DATUM.vm  DATUMR.vm  DATUMRX.vm  EQUIL.vm  GASCONC.vm  GASSATC.vm  GCVD.vm  GETGLOB.vm  GRAVDRB.vm  PBVD.vm  PDVD.vm  PRESSURE.vm  PRVD.vm  RESTART.vm  RPTRST.vm  RPTSOL.vm  RSCONST.vm  RSVD.vm  RTEMPVD.vm  RVCONST.vm  RVCONSTT.vm  RVVD.vm  RVW.vm  SALTP.vm  SALTPVD.vm  SALTVD.vm  SBIOF.vm  SCALC.vm  SGAS.vm  SMICR.vm  SOIL.vm  SOLUTION.velocity  SOLUTION.vm  (+12 more)
opmrun/opmvtl/08_SUMMARY/: ALL.vm  DATE.vm  EXCEL.vm  FMWSET.vm  GMWSET.vm  NEWTON.vm  NMESSAGE.vm  PERFORMA.vm  RPTONLY.vm  RPTONLYO.vm  RUNSUM.vm  SEPARATE.vm  SUMMARY.velocity  SUMMARY.vm  SUMTHIN.vm
opmrun/opmvtl/09_SCHEDULE/: ACTIONR.vm  ACTIONW.vm  ACTIONX.vm  BRANPROP.vm  CECON.vm  COMPDAT.vm  COMPDATL.vm  COMPIMB.vm  COMPLMPL.vm  COMPLUMP.vm  COMPORD.vm  COMPSEGL.vm  COMPSEGS.vm  CSKIN.vm  DATES.vm  DRSDT.vm  DRSDTCON.vm  DRSDTR.vm  DRVDT.vm  DRVDTR.vm  EXIT.vm  GCALECON.vm  GCONCAL.vm  GCONENG.vm  GCONINJE.vm  GCONPRI.vm  GCONPROD.vm  GCONSALE.vm  GCONSUMP.vm  GCONTOL.vm  GCUTBACK.vm  GDCQECON.vm  GECON.vm  GECONT.vm  GEFAC.vm  GLIFTLIM.vm  GLIFTOPT.vm  GNETINJE.vm  GPMAINT.vm  GRUPNET.vm  (+89 more)
opmrun/opmvtl/10_DATA/: PROPS-PVT-Norne1.vm  PROPS-PVT-Norne2.vm  PROPS-PVT-SPE09.vm  PROPS-ROCK-Norne1.vm  PROPS-ROCK-Norne2.vm  PROPS-ROCK-SPE09.vm
opmrun/opmvtl/11_MODELS/: AQF01-CART01.vm  AQF01-FEKT01.vm  MOD02-WSEG01.vm  SPE01-BRIN01.vm  SPE01-CASE01.vm  SPE01-CASE02.vm  SPE01-FOAM02.vm  SPE01-SOLV02.vm  SPE01-THEM02.vm  SPE09-BASE03.vm
opmrun/opmvtl/12_USER/: HELP.inc  HELP.vm
(+402 files in other folders)
